Allow selection of banner attributes.